# sparkle_motion

./: .env_sample  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-ml.txt  sparkle_motion.code-workspace
artifacts/: function_tools_inventory.md  junit_tests.xml  operator-runscript.json
artifacts/prompt_templates/: script_agent_movie_plan_v1.json
artifacts/qa_policy/: README.md
artifacts/schemas/: AssetRefs.schema.json  MoviePlan.schema.json
artifacts/test/: test-movieplan.json
configs/: qa_policy.schema.json  root_agent.yaml  schema_artifacts.yaml  schema_artifacts.yaml.bak.1764185112  tool_registry.yaml  tts_providers.yaml  workflow_agent.yaml
data/content/: .sparkle.env
db/schema/: recent_index.sql
docs/: ADK_COVERAGE.md  ARCHITECTURE.md  COMMAND_LINE.md  GPU_UNIT_TESTS.md  HowToRunLocalTools.md  IMPLEMENTATION_TASKS.md  MODEL_INSTALL_NOTES.md  NOTEBOOK_AGENT_INTEGRATION.md  OPERATIONS_GUIDE.md  ORCHESTRATOR.md  PACKAGING_PROPOSAL.md  PORT_FUBAR.md  PROPOSED_PYPROJECT_ADK_EXTRA.md  RELEASE_NOTES.md  SCHEMA_ARTIFACTS.md  THE_PLAN.md  TODO.md  TODO_v1.md  filesystem_artifact_shim_design.md  gpu_utils.md
docs/archived/: ARCHITECTURE_v2.md  IMPLEMENTATION_TASKS.md  OPERATIONS_GUIDE.md  PACKAGING_PROPOSAL.md  RELEASE_NOTES.md  agents_intensive_capstone_project.md
function_tools/: README.md
function_tools/ScriptAgent/: ENTRYPOINT.md
function_tools/assemble_ffmpeg/: metadata.json
function_tools/images_sdxl/: Dockerfile  entrypoint.py  metadata.json
function_tools/lipsync_wav2lip/: metadata.json
function_tools/qa_qwen2vl/: entrypoint.py  metadata.json
function_tools/script_agent/: Dockerfile  entrypoint.py  metadata.json
function_tools/tts_chatterbox/: metadata.json
function_tools/videos_wan/: Dockerfile  metadata.json
notebooks/: __init__.py  control_panel.py  preview_helpers.py  sparkle_motion.ipynb
proposals/: pyproject_adk.diff
resources/: TODO.md
schemas/: MoviePlan.schema.json  QAReport.schema.json  RunContext.schema.json  StageManifest.schema.json
scripts/: README.md  bootstrap_adk_projects.sh  check_no_legacy.py  colab_drive_setup.py  export_schemas.py  filesystem_artifacts.py  generate_fixture_assets.py  generate_tool_metadata.py  generate_tool_scaffolds.py  install_wav2lip.py  package_qa_policy.py  publish_schemas.py  push_prompt_template.py  recent_index.py  register_root_agent.py  register_root_agent_local.py  register_tools.py  register_workflow.py  register_workflow_local.py  remove_dockerfiles_and_commit.sh  render_script_agent_prompt.py  run_function_tool.py  sparkle-motion
src/google/: __init__.py
src/sparkle_motion/: __init__.py  adk_factory.py  adk_helpers.py  assemble.py  cli.py  colab_helper.py  dialogue_timeline.py  gpu_utils.py  human_review.py  images_agent.py  (+24 more)
tests/: README.md  conftest.py  run_tests.sh  test_adk_factory.py  test_adk_helpers.py  test_adk_helpers_unit.py  test_cli_dryrun.py  test_cli_error_paths.py  test_cli_run.py  test_colab_helper.py  test_gpu_utils.py  test_integration_playable.py  test_manifest_and_runner_behavior.py  test_observability.py  test_orchestrator.py  test_orchestrator_manifest.py  test_orchestrator_resume.py  test_orchestrator_stage_controls.py  test_production_agent.py  test_production_agent_entrypoint.py  test_prompt_templates.py  test_publish_cli_parsing.py  test_publish_schemas_adk_shim.py  test_publish_schemas_adk_shim_negative.py  test_publish_schemas_backup.py  test_qa_policy.py  test_register_root_agent.py  test_register_root_agent_local.py  test_register_tools.py  test_register_workflow.py  test_register_workflow_dryrun.py  test_register_workflow_registry_checks.py  test_render_sequence.py  test_retry_and_resume.py  test_run_manifest.py  test_runner_qa_gating.py  test_schema_registry.py  test_schemas.py  test_script_agent_integration.py  test_script_agent_invoke.py  (+4 more)
(+835 files in other folders)
