[project]
name = "sparkle_motion"
version = "0.1.0"
description = "Sparkle Motion — ADK-native agent tooling and tests (monorepo workspace root)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [ { name = "ekkus93" } ]

# Runtime dependencies are intentionally minimal here; optional features are provided via
# `project.optional-dependencies` so maintainers can opt-in to ADK runtime packages.
dependencies = [
  "Pillow>=10.0.0",
  "ImageHash>=4.3.1",
]

[project.optional-dependencies]
# Optional dependencies for ADK runtime integration. Replace the package name/version
# with the official ADK package you prefer. This is intentionally opt-in.
adk = [
  "google-adk==1.19.0"
]

# Optional extra grouping for heavy ADK runtime/model packages (GPU/CPU variants)
adk-runtime = [
  # Core ML infra (select CUDA wheel appropriate for host)
  "torch>=2.2.0",                   # PyTorch (choose CUDA build appropriate for host)
  "accelerate>=0.20.0",             # Hugging Face accelerate for multi-GPU/FP16
  "diffusers>=0.20.0",              # SDXL pipelines
  "transformers>=4.35.0",           # text + multimodal model tooling
  "safetensors>=0.3.0",             # safe weight format
  "bitsandbytes>=0.40.0",           # optional 8-bit optimizer support (if used)
  "xformers>=0.0.20",               # optional memory-efficient attention

  # Vision & video helpers
  "opencv-python>=4.7.0",
  "ffmpeg-python>=0.2.0",

  # Wan-specific: recommend installing from source or HF repo; list as an advisory
  # Example: "wan-video @ git+https://github.com/Wan-Video/Wan2.1.git"  # WAN2.1 I2V pipeline (review license)

  # Audio / TTS
  "TTS>=0.13.0",                     # Coqui TTS (optional local fallback)
  "soundfile>=0.12.1",
  "librosa>=0.10.0",

  # Utilities
  "huggingface-hub>=0.17.0",
]

[project.urls]
"Homepage" = "https://github.com/ekkus93/sparkle_motion"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-q -r a"

# Notes:
# - This file is a minimal, safe starting point for packaging the repository root.
# - The `adk` optional-dependency is intentionally opt-in. Do not install the extra
#   in environments where the ADK is not available or where you prefer the CLI fallback.
# - I will not stage/commit/push this file unless you explicitly authorize `commit-push`.